[tool.poetry]
name = "molang-insert"
version = "1.0.0"
description = ""
authors = ["Nusiq <nusiq@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchfiles = "^0.24.0"
better-json-tools = "^1.0.4"

[tool.poetry.scripts]
molang-insert = "molang_insert.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
